# image-aesthetic-scoring

./: .gitignore  README.md  SPEC.md  pyproject.toml
aesthetic_scoring/: __init__.py  _device.py  errors.py  features.py  fgaesq.py  hpsv2.py  intent.py  intent_api.py  laion.py  pickscore.py  types.py
tests/: conftest.py
tests/fixtures/: caption_morph_ladder_robot.txt  prompt.txt
tests/smoke/: test_fgaesq_smoke.py  test_hpsv2_smoke.py  test_laion_smoke.py  test_pickscore_smoke.py
tests/unit/: test_device.py  test_errors.py  test_fgaesq_unit.py  test_hpsv2_unit.py  test_import_surface.py  test_laion_unit.py  test_pickscore_unit.py  test_runtime_api.py  test_types.py
